# Boilr-CLI-TOOL

./: .gitignore  CMakeLists.txt  CROSS_COMPILE.md  README.md  build.sh  clear-builds.sh  create-cross-platform-builds.sh  main.cpp
documentation/: usage.txt
include/: CMakeLists.txt  boilr.cpp  boilr.h  buildRegistry.h  registerBuilds.h
releases/: installer.ps1  installer.sh  make-release.sh  zip-all.sh
scripts/python/releases/: store_release_binaries.py
templates/: generate_headers.sh  zip_all.sh
toolchains/: x86.cmake
